deploy/firewall-rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Aug  4 17:30:59 2026
*filter
:INPUT DROP [73:9151]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [5796:10217239]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 10.10.10.0/24 -m comment --comment "vertrauenswuerdiges LAN (SSH, MCP, Browser-Tests)" -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m comment --comment SSH -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5273 -m comment --comment "valheim-babylon Client (oeffentlich)" -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5274 -m comment --comment "WoV Client + Editor (oeffentlich)" -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 2466 -j ACCEPT
-A INPUT -s 10.10.10.0/24 -p tcp -m tcp --dport 2466 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 2467 -j ACCEPT
-A INPUT -s 10.10.10.0/24 -p tcp -m tcp --dport 2467 -j ACCEPT
COMMIT
# Completed on Tue Aug  4 17:30:59 2026
