deploy/firewall-rules.v6
# Generated by ip6tables-save v1.8.10 (nf_tables) on Tue Aug  4 17:29:42 2026
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5273 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5274 -j ACCEPT
-A INPUT -s ::1/128 -p tcp -m tcp --dport 2466 -j ACCEPT
-A INPUT -s ::1/128 -p tcp -m tcp --dport 2467 -j ACCEPT
COMMIT
# Completed on Tue Aug  4 17:29:42 2026
